<resources>
    <string name="app_name">HO!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="button">Button</string>
    <string name="citizen">Citizen</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="avocado">Avocado</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
</resources>