<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_d">

    <EditText
        android:id="@+id/etClientName"
        android:layout_width="308dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/text_view_borders"
        android:ems="10"
        android:inputType="none"
        android:paddingStart="15sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="308dp"
        android:layout_height="83dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClientName">

        <ImageButton
            android:id="@+id/btnOrange"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/naranja" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cbOrange"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/orange"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="308dp"
        android:layout_height="83dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/btnYellow"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/pi_a" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cbYellow"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yellow"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="308dp"
        android:layout_height="83dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/btnAguacate"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/aguacate" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cbAguacate"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/avocado"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/etWeight"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/etKg"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:text="@string/kg"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/etWeightValue"
        android:layout_width="66dp"
        android:layout_height="44dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.131" />

</androidx.constraintlayout.widget.ConstraintLayout>