<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/grey"
        android:clickable="true"
        android:enabled="true"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.096"
        tools:text="Register" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:autofillHints=""
        android:background="@drawable/text_view_borders"
        android:hint="@string/user"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:background="@drawable/text_view_borders"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="7dp"
        android:paddingEnd="15dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/grey"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:enabled="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>